2003-08-13  Alexandre Duret-Lutz  <adl@gnu.org>

	Fix for PR automake/399:
	* m4/python.m4: Use AC_PATH_PROGS, not AC_PATH_PROG.
	Report from Per Cederqvist.

2003-08-10  Jim Meyering  <jim@meyering.net>

	* lib/depcomp: Adjust comment to match code.
	* lib/mkinstalldirs: Revert yesterday's change; reasons here:
	http://mail.gnu.org/archive/html/automake-patches/2003-08/msg00042.html

2003-08-10  Alexandre Duret-Lutz  <adl@gnu.org>

	Revert the fix for PR automake/291:
	* automake.in (macro_define): Do not warn about variables
	starting with `_' which are an issue on NEWS-OS 4.2R.  According
	to Paul Eggert, NEWS-OS 4.2R is ten years old, the latest version
	was released on 1996 and is not in wide use.  On the other hand,
	variables starting with `_' are mandatory in several situations,
	so diagnosing them is more annoying than useful.
	* tests/canon5.test: Do not use -Wno-portability.
	* tests/vars2.test: Delete.
	* tests/Makefile.am (TESTS): Remove vars2.test.
	Suggested by Jim Meyering.

2003-08-09  Jim Meyering  <jim@meyering.net>

	* lib/mkinstalldirs: Remove each sequence of spaces before a
	TAB character.
	* lib/depcomp: Search for TAB-SPC, not SPC-TAB.

2003-08-07  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/ltcond.test: Thinko.

2003-08-05  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/ltconv.test: s/rm/rm -f/ to placate maintainer-check.

	* automake.in (handle_texinfo_helper): Use the user definition
	of TEXINFO_TEX before checking for cygnus or AC_CONFIG_AUX_DIR.
	* tests/txinfo22.test: New file.
	* tests/Makefile.am (TESTS): Add txinfo22.test.
	Report from Tom Tromey.

2003-07-31  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>  (tiny change)

	* lib/depcomp (aix): Support AIX Compiler version 6.

2003-07-31  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (A Shared Library): Rewrite and split into
	subsections.  Valuable comments from Norman Gray, Harlan Stenn,
	Tim Van Holder, and Guido Draheim.