@@ -197,6 +197,7 @@ Rusty Ballinger		rusty@rlyeh.engr.sgi.com
 Ryan T. Sammartino	ryants@shaw.ca
 Sam Hocevar		sam@zoy.org
 Sander Niemeijer	niemeijer@science-and-technology.nl
+Scott James Remnant	scott@netsplit.com
 Sergey Vlasov		vsu@mivlgu.murom.ru
 Seth Alves		alves@hungry.com
 Shuhei Amakawa		sa264@cam.ac.uk
