@@ -1490,7 +1490,9 @@ sub parse_arguments ()
      'foreign' 	        => sub { &set_strictness ('foreign'); },
      'include-deps' 	=> sub { $cmdline_use_dependencies = 1; },
      'i|ignore-deps' 	=> sub { $cmdline_use_dependencies = 0; },
-     'no-force' 	=> sub { $force_generation = 0; },
+     # The current --no-force implementation is bugged, hence the
+     # option is ignored.  It will be fixed in Automake 1.8.
+     'no-force' 	=> sub { },
      'f|force-missing'  => \$force_missing,
      'o|output-dir:s'	=> \$output_directory,
      'a|add-missing' 	=> \$add_missing,
