@@ -1019,6 +1019,9 @@ Ordinarily @code{automake} creates all @file{Makefile.in}s mentioned in
 @file{Makefile.in}s which are out of date with respect to one of their
 dependents.
 
+Due to a bug in its implementation, this option is currently ignored.
+It will be fixed in Automake 1.8.
+
 @item -o @var{dir}
 @itemx --output-dir=@var{dir}
 @opindex -o
