@@ -1,4 +1,4 @@
-@set UPDATED 31 July 2003
-@set UPDATED-MONTH July 2003
+@set UPDATED 25 August 2003
+@set UPDATED-MONTH August 2003
 @set EDITION 1.7.6a
 @set VERSION 1.7.6a
