@@ -161,6 +161,7 @@ discover.test \
 distcom.test \
 distcom2.test \
 distcom3.test \
+distcom6.test \
 distdir.test \
 distname.test \
 dollar.test \
