@@ -1,3 +1,11 @@
+2003-08-25  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	For Debian Bug #206299:
+	* automake.in (parse_arguments): Ignore --no-force.
+	* automake.texi (Invoking Automake): Document this.
+	* tests/distcom6.test: New file.  Report from Scott James Remnant.
+	* tests/Makefile.am (TESTS): Add distcom6.test.
+
 2003-08-13  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	Fix for PR automake/399:
